# NCAA-CFB-Simulation

./: CLAUDE.md  LICENSE  README.md  cfb - Sheet1 (1).csv  cfb.json  game.py  game_clock.py  gui.py  main.py  play.py  player.py  playoffs.py  pyproject.toml  requirements.txt  season.py  team.py  team_loader.py  test_game.py  test_play.py  test_season.py  test_team.py  util.py
.github/workflows/: ci.yml
docs/rules/: finances.md  game.md  playoffs.md  recruiting.md  season.md
src/: cli.py  game.py  game_clock.py  game_state.py  main.py  play.py  player.py  playoffs.py  score.py  season.py  stats.py  team.py
src/config/: conf_rules.py
tests/: README.md  conftest.py  test_depth_chart.py  test_game.py  test_play.py  test_playoffs.py  test_season.py  test_setup.py  test_stats.py  test_team.py
utils/: team_loader.py
